1.15 Not Released

 * Better Makefile.PL.

 * The tests now require Test::More version 0.88 or newer.

 * Add test files t/release-test-version.t, t/release-portability.t, and
   t/release-cpan-changes.t.

 * New MANIFEST.SKIP file based on the template in the ExtUtils-Manifest
   distribution.

 * Format CHANGES according to CPAN::Changes::Spec.

1.14 2016-12-03 pjacklam

 * Remove BENCHMARK file. The information there was obsolete.

 * Remove INSTALL file. The information is in the README file.

 * Use ExtUtils::MakeMaker rather than Module::Install in Makefile.PL.

 * Explicitly set required version of Math::BigInt in Math/Big.pm.

 * Trim whitespace.

 * Remove author information in LICENSE file.

 * Update README file.

 * Inform that the TODO file is not up to date.

1.13 2016-04-26 pjacklam

 * Replace "use vars ..." with "our ...".

 * Fix documentation error in Math::Big. (CPAN RT #60614)

 * Add patch to speed up primes(). (CPAN RT #81986)

 * Fix documentation error in Math::Big::Factors. (CPAN RT #100917)

 * Use OO-style calls, e.g., Math::BigInt->bzero(), not Math::BigInt::bzero().
   (CPAN RT #113959)

 * Use "=pod" to start POD section.

 * In the POD, replace "METHODS" header with "FUNCTIONS". OO-style calls are
   not supported, so they are functions, not methods.

 * In the POD, use "=item" for each function, not "=head2".

 * Code reformatting.

 * Remove trailing whitespace.

 * Remove unnecessary "1;" at end of file.

 * Add "use warnings" to all modules.

 * In Makefile.PL, add "#!perl" to the top, as it gives nice syntax
   highlighting in some editors.

 * In Makefile.PL, update author information.

 * In Makefile.PL, change required version of Math::BigInt to 1.82 (which
   shipped with Math::BigFloat 1.54). This is the oldest version of
   Math::BigInt (and Math::BigFloat) that work with this distribution.

 * In Makefile.PL, change "build_requires 'Test::More' => 0.42" to