@@ -1,26 +1,0 @@
-#!/usr/bin/perl -w
-
-use Test::More;
-use strict;
-
-my $tests;
-
-BEGIN
-   {
-   $tests = 2;
-   plan tests => $tests;
-   chdir 't' if -d 't';
-   use lib '../lib';
-   };
-
-SKIP:
-  {
-  skip("Test::Pod::Coverage 1.08 required for testing POD coverage", $tests)
-    unless do {
-    eval "use Test::Pod::Coverage 1.08";
-    $@ ? 0 : 1;
-    };
-
-  pod_coverage_ok( 'Math::Big', "All our Math::Big are covered" );
-  pod_coverage_ok( 'Math::Big::Factors', "All our Math::Big::Factors are covered" );
-  }
