@@ -1,5 +1,8 @@
 1.15 Not Released
 
+ * Convert test files t/pod.t and t/pod_cov.t into t/release-pod.t and
+   t/release-pod-coverage.t.
+
  * Better Makefile.PL.
 
  * The tests now require Test::More version 0.88 or newer.
